// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataVersionSelect Displays empty when no versions available 1`] = `
<DataVersionSelect
  api={
    Object {
      "getWfModuleVersions": [Function],
      "setWfModuleVersion": [Function],
    }
  }
  isReadOnly={true}
  revision={202}
  setClickNotification={[Function]}
  testing={true}
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3"
    >
      Version
    </div>
    <div
      className="open-modal t-f-blue content-3 ml-2"
    >
      -
    </div>
  </div>
</DataVersionSelect>
`;

exports[`DataVersionSelect Does not save selection when user hits Cancel 1`] = `
<DataVersionSelect
  api={
    Object {
      "getWfModuleVersions": [Function],
      "setWfModuleVersion": [Function],
    }
  }
  isReadOnly={false}
  revision={202}
  setClickNotification={[Function]}
  testing={true}
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3"
    >
      Version
    </div>
    <div>
      <div
        className="open-modal t-f-blue content-3 ml-2"
        onClick={[Function]}
      >
        1 of 5
      </div>
      <Modal
        autoFocus={true}
        backdrop={true}
        backdropTransitionTimeout={150}
        className="modal-dialog"
        fade={true}
        isOpen={false}
        keyboard={true}
        modalTransitionTimeout={300}
        toggle={[Function]}
        zIndex={1050}
      />
    </div>
  </div>
</DataVersionSelect>
`;

exports[`DataVersionSelect Renders correctly when in Private mode, and selection is confirmed when user hits OK 1`] = `
<DataVersionSelect
  api={
    Object {
      "getWfModuleVersions": [Function],
      "setWfModuleVersion": [Function],
    }
  }
  isReadOnly={false}
  revision={202}
  setClickNotification={[Function]}
  testing={true}
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3"
    >
      Version
    </div>
    <div
      className="open-modal t-f-blue content-3 ml-2"
    >
      -
    </div>
  </div>
</DataVersionSelect>
`;

exports[`DataVersionSelect Renders correctly when in Private mode, and selection is confirmed when user hits OK 2`] = `
<div
  className="modal-dialog modal-dialog"
  role="document"
>
  <div
    className="modal-content"
  >
    <ModalHeader
      className="dialog-header"
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <div
        className="dialog-header modal-header"
      >
        <h4
          className="modal-title"
        >
          <div
            className="title-4 t-d-gray"
          >
            DATA VERSIONS
          </div>
        </h4>
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
    </ModalHeader>
    <ModalBody
      className="list-body"
      tag="div"
    >
      <div
        className="list-body modal-body"
      >
        <div
          className=""
        >
          <div
            className="line-item-data d-flex justify-content-between list-test-class"
            onClick={[Function]}
          >
            <div
              className="content-3"
            >
              Jul 10 2017 - 05:57PM
            </div>
            <div
              className="icon icon-notification mr-5"
            />
          </div>
          <div
            className="line-item-data d-flex justify-content-between list-test-class"
            onClick={[Function]}
          >
            <div
              className="content-3"
            >
              Jun 10 2017 - 05:57PM
            </div>
          </div>
          <div
            className="line-item-data d-flex justify-content-between list-test-class"
            onClick={[Function]}
          >
            <div
              className="content-3"
            >
              May 10 2017 - 05:57PM
            </div>
          </div>
          <div
            className="line-item-data-selected d-flex justify-content-between list-test-class"
            onClick={[Function]}
          >
            <div
              className="content-3"
            >
              Apr 10 2017 - 05:57PM
            </div>
          </div>
          <div
            className="line-item-data d-flex justify-content-between list-test-class"
            onClick={[Function]}
          >
            <div
              className="content-3"
            >
              Mar 10 2017 - 05:57PM
            </div>
          </div>
        </div>
      </div>
    </ModalBody>
    <ModalFooter
      className="dialog-footer d-flex justify-content-between"
      tag="div"
    >
      <div
        className="dialog-footer d-flex justify-content-between modal-footer"
      >
        <div
          className="alert-setting-modal"
        >
          <div
            className="alert-setting"
          >
            <div
              className="d-flex align-items-center mb-2"
            >
              <div
                className="icon-notification module-icon mr-3"
              />
              <div
                className="info-1"
              >
                Alerts are OFF
              </div>
            </div>
            <div>
              Turn alerts ON to be notified via email if new data is released.
            </div>
          </div>
          <div
            className="button-gray action-button test-cancel-button"
            onClick={[Function]}
          >
            Turn on
          </div>
        </div>
        <div
          className="button-blue action-button test-ok-button"
          onClick={[Function]}
        >
          Load
        </div>
      </div>
    </ModalFooter>
  </div>
</div>
`;

exports[`DataVersionSelect Renders correctly when in Private mode, and selection is confirmed when user hits OK 3`] = `
<DataVersionSelect
  api={
    Object {
      "getWfModuleVersions": [Function],
      "setWfModuleVersion": [Function],
    }
  }
  isReadOnly={false}
  revision={202}
  setClickNotification={[Function]}
  testing={true}
  wfModuleId={808}
>
  <div
    className="version-item"
  >
    <div
      className="t-d-gray content-3"
    >
      Version
    </div>
    <div>
      <div
        className="open-modal t-f-blue content-3 ml-2"
        onClick={[Function]}
      >
        5 of 5
      </div>
      <Modal
        autoFocus={true}
        backdrop={true}
        backdropTransitionTimeout={150}
        className="modal-dialog"
        fade={true}
        isOpen={false}
        keyboard={true}
        modalTransitionTimeout={300}
        toggle={[Function]}
        zIndex={1050}
      />
    </div>
  </div>
</DataVersionSelect>
`;
